Tue Oct 01 12:19:32 BST 2002  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am,configure.in,PLATFORMS: require automake 1.6.3
	  (and hence autoconf 2.54) to fix problem building tests/internaltest
	  with Solaris make.

Mon Sep 30 20:30:42 BST 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: Improved wording about bogus OMEXCEPT failures);
	  Added results for OpenBSD 3.0 and Solaris 8 on x86 (both work).

Mon Sep 30 20:25:03 BST 2002  Olly Betts <olly@survex.com>

	* docs/: Pruned .cvsignore; removed cvs.html (link to CVS info
	  on website directly); removed using_stemmers.html - those
	  wishing to use the C API to the stemmers ought to look at
	  Snowball instead; include HTML versions of quickstart*.cc
	  in tarballs; improved wording in various places.

Mon Sep 23 19:33:31 BST 2002  Olly Betts <olly@survex.com>

	* net/Makefile.am: Fixed building of readquery.cc from readquery.ll.

Sun Sep 22 03:57:20 BST 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated.

Fri Sep 20 15:09:25 BST 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: Added note about bogus OMEXCEPT test failures with
	  GCC 2.95.

Fri Sep 20 01:36:35 BST 2002  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.in: 0.5.0 release!

Fri Sep 20 01:01:52 BST 2002  Olly Betts <olly@survex.com>

	* Makefile.am: Perl module we need to process todo.xml is XML::Parser
	  not XML, so corrected error message.
	* configure.in: Commented out MSG_WARN() when Perl modules XML::Parser
	  or Text::Format aren't found.  In a release tarball, this only
	  matters if you modify docs/todo.xml, and the warning message(s) may
	  alarm those building the software.

Thu Sep 19 00:57:23 BST 2002  Olly Betts <olly@survex.com>

	* .cvsignore: Added depcomp, missing, mkinstalldirs.

Thu Sep 19 00:49:01 BST 2002  Olly Betts <olly@survex.com>

	* HACKING: Added note about safe way to generate files in make rules.

Thu Sep 19 00:45:51 BST 2002  Olly Betts <olly@survex.com>
