@@ -26,7 +26,7 @@ bin_SCRIPTS = xapian-config
 
 CLEANFILES = TODO TODO.release xapian-config
 
-EXTRA_DIST = ChangeLog buildall HACKING PLATFORMS TODO TODO.release xapian.spec
+EXTRA_DIST = ChangeLog HACKING PLATFORMS TODO TODO.release xapian.spec
 
 lib_LTLIBRARIES = libxapian.la
 
