@@ -2,7 +2,7 @@
 
 <Description>
 Directory containing m4 macros needed for building Xapian configuration
-scripts.  These macros will be put into acinclude.m4 by buildall - this
+scripts.  These macros are m4_include-d by acinclude.m4 - this
 directory is just a convenient way to keep them in separate files and up
 to date.
 </Description>
