@@ -1,0 +1,52 @@
+#!/bin/sh
+# bootstrap a xapian-core source tree obtained from CVS to produce a tree like
+# you'd get from unpacking the results of "make dist"
+#
+# Copyright (C) 2002 Olly Betts
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; either version 2 of the
+# License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+# USA
+
+bison_version="`bison --version|sed 's/.* //;q' 2>/dev/null`"
+case "$bison_version" in
+1.3[5-9]|1.3[5-9][^0-9]*|1.[4-9][0-9]*|1.[1-9][0-9][0-9]*|[2-9]*|[1-9][0-9]*)
+  ;; # marvellous - 1.35 or newer
+*)
+  echo "You must have Bison 1.35 or newer (you appear to have $bison_version)"
+  exit 1
+esac
+
+srcdir="`echo $0|sed 's![^/]*$!!'`"
+
+# change to srcdir to give Debian's hybrid autoconf 2.13/2.50 more to work with
+cd "$srcdir"
+
+# useful for building with xapian rather than for building xapian-core itself
+aclocal_dir="`xapian-config --prefix 2>/dev/null`/share/aclocal"
+case "$aclocal_dir" in
+/share/aclocal) ;; # xapian-config not found
+"`aclocal --print-ac-dir`") ;; # xapian.m4 is where aclocal looks by default
+*) test -d "$aclocal_dir" && ACLOCAL_FLAGS="$ACLOCAL_FLAGS -I$aclocal_dir" ;;
+esac
+
+set -e
+
+libtoolize --force --automake
+aclocal $ACLOCAL_FLAGS
+autoheader
+autoconf
+automake --add-missing
+
+echo "Bootstrapped successfully - now run ./configure and make as usual"
